<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_iv_produto"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_no_image"
        android:contentDescription="@string/activity_formulario_produto_imageView_content_description" />

    <Button
        android:id="@+id/dialog_button_carregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_text"
        app:icon="@drawable/ic_action_refresh"
        app:layout_constraintBottom_toBottomOf="@id/dialog_iv_produto"
        app:layout_constraintEnd_toEndOf="@id/dialog_iv_produto"
        app:layout_constraintStart_toStartOf="@id/dialog_iv_produto"
        app:layout_constraintTop_toBottomOf="@id/dialog_iv_produto" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_image_url"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:hint="@string/dialog_text_input_hint_url"
        app:expandedHintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_button_carregar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>